Quick bio update

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -15,12 +15,10 @@
     .col_6#about
       h2 About
       p
-        | I'm a .NET and Rails designer, developer, and architect working out of Calgary. I've done extensive development work, and I'll work on almost any technology stack. Drop me a line at 
-        a(href='mailto:brandur@mutelight.org') brandur@mutelight.org
-        | .
-      p I'm interested in energy and how it relates to our society, longboarding, muay thai, breakdancing, symphonic metal, surfing, and the guitar.
+        | I'm a polyglot software engineer at Heroku working out of San Francisco, California. Drop me a line at #{link_to 'brandur@mutelight.org', 'mailto:brandur@mutelight.org'}.
+      p I'm interested in energy and how it relates to our society, travel, longboarding, muay thai, symphonic metal, and the guitar.
       p  
-        a(href='http://twitter.com/fyrerise' title='Follow Brandur on Twitter') You should follow me on Twitter.
+        a(href='http://twitter.com/fyrerise' title='Follow Brandur on Twitter') I tweet often.
 
     .col_6.last#projects
       h2 Projects
@@ -29,7 +27,7 @@
         li #{link_to 'Parched', 'https://github.com/brandur/parched'} &mdash; A minimalist Git-backed wiki with support for Tilt's set of template engines, syntax highlighting, and MathJax.
         li #{link_to 'Dorian', 'https://github.com/brandur/dorian'} &mdash; A personal identity manager and aggregator written in Rails 3.1. The site you're looking at now is a running demo of this project.
         li #{link_to 'Facts', 'https://github.com/brandur/facts'} &mdash; A tool for getting smarter and winning arguments. Coupled with a #{link_to 'command line interface', 'https://github.com/brandur/facts-cli'} and a #{link_to 'Twitter bot', 'https://github.com/brandur/facts-twitter'}.
-        li #{link_to 'Askja', 'https://github.com/brandur/askja'} &mdash; Minimalist blogging platform written in Rails as a flexible alternative to static generators.
+        /li #{link_to 'Askja', 'https://github.com/brandur/askja'} &mdash; Minimalist blogging platform written in Rails as a flexible alternative to static generators.
 
   .row
     .col_4#articles
