--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -14,9 +14,8 @@
   .row
     .col_6#about
       h2 About
-      p
-        | I'm a polyglot software engineer at Heroku working out of San Francisco, California. Drop me a line at #{link_to 'brandur@mutelight.org', 'mailto:brandur@mutelight.org'}.
-      p I'm interested in energy and how it relates to our society, travel, longboarding, muay thai, symphonic metal, and the guitar.
+      p My name is #{link_to 'Brandur', 'http://brandur.org'}. I'm a polyglot software engineer and part-time designer working at #{link_to 'Heroku', 'http://heroku.com'} in San Francisco, California. I'm a Canadian expat. My name is Icelandic. Drop me a line at #{link_to 'brandur@mutelight.org', 'mailto:brandur@mutelight.org'}.
+      p Aside from technology, I'm interested in energy and how it relates to our society, travel, longboarding, muay thai, symphonic metal, and the guitar.
       p  
         a(href='http://twitter.com/fyrerise' title='Follow Brandur on Twitter') I tweet often.
 
