Adding month links and headers to tweets list
Because I tweet a lot nowadays.

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -47,7 +47,8 @@ h2
   font-size: 34px
 
 h3
-  font-size: 24px
+  font-size: 20px
+  margin: 14px 0
 
 h2 a, h2 a:visited, h2 a:hover, h3 a, h3 a:visited, h3 a:hover, h4 a, h4 a:visited, h4 a:hover
   color: #000
@@ -92,6 +93,9 @@ ul
 .clear_fix
   clear: both
 
+h3.top
+  margin-top: 0
+
 ul.section_list
   color: $light
   font-size: 15px
@@ -101,6 +105,20 @@ ul.section_list
 
   li
     margin: 6px 0
+
+    ul
+      color: $light
+      font-size: 12px
+      line-height: 1em
+      list-style-type: none
+      margin: 6px 0
+      padding: 0 0 0 6px
+
+      li
+        margin: 8px 0
+
+        a, a:visited, a:hover
+          color: $light
 
 #header
 
