--- a/app/views/charts/_action_chart.html.slim
+++ b/app/views/charts/_action_chart.html.slim
@@ -25,7 +25,7 @@
               text: null
           tooltip:
             formatter: ->
-              this.y + (this.y != 1 ? ' actions' : ' action') + ' in ' + this.x;
+              this.y + (if this.y != 1 then ' actions' else ' action') + ' in ' + this.x;
           series: [
             { name: 'Tweets', data: actionCountByMonthData }
           ]
