--- a/app/views/charts/_books_chart_by_num_pages.html.slim
+++ b/app/views/charts/_books_chart_by_num_pages.html.slim
@@ -22,7 +22,7 @@
             text: null
         tooltip:
           formatter: ->
-            this.y + (this.y != 1 ? ' pages read' : ' page read') + ' in ' + this.x
+            this.y + (if this.y != 1 then ' pages read' else ' page read') + ' in ' + this.x
         plotOptions:
           bar:
             dataLabels:
