--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,7 +1,7 @@
 doctype 5
 html
   head
-    title= content_for?(:title) ? yield(:title) : 'brandur.org'
+    title= content_for?(:title) ? yield(:title) : 'skryl.com'
     = stylesheet_link_tag    'application', :debug => Rails.env.development?
     /[if lt IE 9]
       link rel='stylesheet' href='/columnal/ie.css' type='text/css' media='screen'
