--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -29,4 +29,5 @@ html
 
     = content_for?(:content) ? yield(:content) : yield
     = yield(:post_body)
-    = google_analytics_js 
+    - if Rails.env == 'production'
+      |= google_analytics_js 
