--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -12,11 +12,11 @@
 .row
   .col_6#about
     h2 About
-    p My name is #{link_to 'Alex', 'http://skryl.com'}. I'm a freelance software engineer working in Chicago, Illinois. Drop me a line at #{link_to 'aleksey.skryl@gmail.com', 'mailto:aleksey.skryl@gmail.com'}.
+    p My name is #{link_to 'Alex', 'http://skryl.com'}. I'm a freelance software engineer living in Chicago. Drop me a line at #{link_to 'aleksey.skryl@gmail.com', 'mailto:aleksey.skryl@gmail.com'}.
 
   .col_6.last#articles
     h2= link_to 'Articles', 'http://orig1n.net'
-    p I <a href="http://orig1n.net">blog</a> about tech and other interesting things. Here are the latest articles that I've written:
+    p I <a href="http://orig1n.net">blog</a> about complexity and other interesting things. Here are the latest articles that I've written:
     ul
       - @articles.each do |a|
         li
@@ -37,10 +37,10 @@
     h2 Projects
     p These are the open source projects that I'm currently working on:
     ul
-      li #{link_to 'automata', 'https://github.com/skryl/automata'} &mdash; An N-Dimensional cellular automata simulation framework.
-      li #{link_to 'qbwc', 'https://github.com/skryl/qbwc'} &mdash; A Rails plugin to interface with Intuit's Quickbooks Web Connector.
+      li #{link_to 'automata', 'https://github.com/skryl/automata'} &mdash; An n-Dimensional cellular automata simulation and evolution framework.
+      li #{link_to 'qbwc', 'https://github.com/skryl/qbwc'} &mdash; A Rails gem for interfacing with Intuit's Quickbooks Web Connector.
       li #{link_to 'quickbooks_api', 'https://github.com/skryl/quickbooks_api'} &mdash; A Ruby wrapper for Intuit's Quickbooks XML API.
-      li #{link_to 'config_logic', 'https://github.com/skryl/config_logic'} &mdash; Intuitive configuration managment.
+      li #{link_to 'config_logic', 'https://github.com/skryl/config_logic'} &mdash; Intuitive configuration managment for Ruby projects.
       li #{link_to 'fuzzy_notes', 'https://github.com/skryl/fuzzy_notes'} &mdash; A CLI note manager with fuzzy search, encryption, and Evernote sync.
       li #{link_to 'buffered_logger', 'https://github.com/skryl/buffered_logger'} &mdash; A flexible, thread safe logger with custom formatting and ANSI color.
 
