--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -12,11 +12,11 @@
 .row
   .col_6#about
     h2 About
-    p My name is #{link_to 'Alex', 'http://skryl.com'}. I'm a freelance software engineer living in Chicago. Drop me a line at #{link_to 'aleksey.skryl@gmail.com', 'mailto:aleksey.skryl@gmail.com'}.
+    p My name is #{link_to 'Alex', 'http://skryl.org'}. I'm a freelance software engineer living in Chicago. Drop me a line at #{link_to 'aleksey.skryl@gmail.com', 'mailto:aleksey.skryl@gmail.com'}.
 
   .col_6.last#articles
-    h2= link_to 'Articles', 'http://orig1n.net'
-    p I <a href="http://orig1n.net">blog</a> about complexity and other interesting things. Here are the latest articles that I've written:
+    h2= link_to 'Articles', :articles
+    p I #{link_to 'blog', :articles} about complexity and other interesting things. Here are the latest articles that I've written:
     ul
       - @articles.each do |a|
         li
@@ -34,8 +34,8 @@
     = render :partial => 'charts/books_chart'
 
   .col_6.last#projects
-    h2 Projects
-    p These are the open source projects that I'm currently working on:
+    h2= link_to 'Projects', "https://github.com/skryl"
+    p These are the #{link_to 'open source projects', "https://github.com/skryl"} that I'm currently working on:
     ul
       li #{link_to 'pg_schema', 'https://github.com/skryl/pg_schema'} &mdash; Simple schema support for the Rails pg adapter.
       li #{link_to 'automata', 'https://github.com/skryl/automata'} &mdash; An n-Dimensional cellular automata simulation and evolution framework.
