--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -37,13 +37,13 @@
     h2= link_to 'Projects', "https://github.com/skryl"
     p These are the #{link_to 'open source projects', "https://github.com/skryl"} that I'm currently working on:
     ul
+      li #{link_to 'heroku_db_env', 'https://github.com/skryl/heroku_db_env'} &mdash; Overwrite Heroku's auto-generated database configuration.
       li #{link_to 'pg_schema', 'https://github.com/skryl/pg_schema'} &mdash; Simple schema support for the Rails pg adapter.
       li #{link_to 'automata', 'https://github.com/skryl/automata'} &mdash; An n-Dimensional cellular automata simulation and evolution framework.
       li #{link_to 'qbwc', 'https://github.com/skryl/qbwc'} &mdash; A Rails gem for interfacing with Intuit's Quickbooks Web Connector.
       li #{link_to 'quickbooks_api', 'https://github.com/skryl/quickbooks_api'} &mdash; A Ruby wrapper for Intuit's Quickbooks XML API.
       li #{link_to 'config_logic', 'https://github.com/skryl/config_logic'} &mdash; Intuitive configuration managment for Ruby projects.
       li #{link_to 'fuzzy_notes', 'https://github.com/skryl/fuzzy_notes'} &mdash; A CLI note manager with fuzzy search, encryption, and Evernote sync.
-      li #{link_to 'buffered_logger', 'https://github.com/skryl/buffered_logger'} &mdash; A flexible, thread safe logger with custom formatting and ANSI color.
 
 
 
