--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -37,6 +37,7 @@
     h2= link_to 'Projects', "https://github.com/skryl"
     p These are the #{link_to 'open source projects', "https://github.com/skryl"} that I'm currently working on:
     ul
+      li #{link_to 'polly', 'https://github.com/skryl/polly'} &mdash; A DSL for working with symbolic expressions in Ruby.
       li #{link_to 'heroku_db_env', 'https://github.com/skryl/heroku_db_env'} &mdash; Overwrite Heroku's auto-generated database configuration.
       li #{link_to 'pg_schema', 'https://github.com/skryl/pg_schema'} &mdash; Simple schema support for the Rails pg adapter.
       li #{link_to 'automata', 'https://github.com/skryl/automata'} &mdash; An n-Dimensional cellular automata simulation and evolution framework.
