--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -46,7 +46,6 @@
       li #{link_to 'config_logic', 'https://github.com/skryl/config_logic'} &mdash; Intuitive configuration managment for Ruby projects.
       li #{link_to 'fuzzy_notes', 'https://github.com/skryl/fuzzy_notes'} &mdash; A CLI note manager with fuzzy search, encryption, and Evernote sync.
 
-
 .row
   .col_6#twitter
     h2= link_to 'Twitter', :twitter
@@ -74,6 +73,24 @@
           = raw a.content_html
     p= link_to "See my Github profile", 'https://github.com/skryl'
 
+.row
+  .col_6#Sleep
+    h2= link_to 'Sleep', :sleep
+    = render :partial => 'charts/sleep_chart', :locals => { :is_compact => true }
+    /* p Here is my most recent sleep data:*/
+    /* ul*/
+    /*   - @sleep_records.each do |r|*/
+    /*     li*/
+    /*       = raw t.content_html*/
+    /*       = ' '*/
+    /*       span.meta= link_to distance_of_time_in_words(t.published_at.getlocal, Time.now, true), t.permalink*/
+    /* p= link_to "Every one of my #{pluralize(number_with_delimiter(@tweet_count), 'tweet')}", :twitter*/
+
+  .col_6.last#Exersice
+    h2= link_to 'Exersice', :exercise
+    = render :partial => 'charts/sleep_chart'
+
+
 /* .row*/
 /*   .col_6#photos*/
 /*     h2 Photos*/
@@ -84,20 +101,6 @@
 /*             img src=p.thumbnail_url*/
 /*     .clear*/
 /*     p placeholder
-
-.row
-  .col_12#Sleep
-    h2= link_to 'Sleep', :sleep
-    = render :partial => 'charts/sleep_chart'
-    /* p Here is my most recent sleep data:*/
-    /* ul*/
-    /*   - @sleep_records.each do |r|*/
-    /*     li*/
-    /*       = raw t.content_html*/
-    /*       = ' '*/
-    /*       span.meta= link_to distance_of_time_in_words(t.published_at.getlocal, Time.now, true), t.permalink*/
-    /* p= link_to "Every one of my #{pluralize(number_with_delimiter(@tweet_count), 'tweet')}", :twitter*/
-
 
 .row
   .col_12.last
