--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -74,22 +74,15 @@
     p= link_to "See my Github profile", 'https://github.com/skryl'
 
 .row
-  .col_12#Sleep
+  .col_6#Sleep
     h2= link_to 'Sleep', :sleep
-    p I track my #{link_to 'sleep quality', :sleep} in order to improve my mental performance.
+    p I track my #{link_to 'sleep', :sleep} in order to improve my mental performance.
     = render :partial => 'charts/sleep_chart', :locals => { :is_compact => true }
-    /* p Here is my most recent sleep data:*/
-    /* ul*/
-    /*   - @sleep_records.each do |r|*/
-    /*     li*/
-    /*       = raw t.content_html*/
-    /*       = ' '*/
-    /*       span.meta= link_to distance_of_time_in_words(t.published_at.getlocal, Time.now, true), t.permalink*/
-    /* p= link_to "Every one of my #{pluralize(number_with_delimiter(@tweet_count), 'tweet')}", :twitter*/
 
-  /* .col_6.last#Exersice*/
-  /*   h2= link_to 'Exersice', :exercise*/
-  /*   = render :partial => 'charts/sleep_chart'*/
+  .col_6.last#Exercise
+    h2= link_to 'Exercise', :exercise
+    p I track my #{link_to 'exercise', :exercise} to stay healthy.
+    = render :partial => 'charts/exercise_chart', :locals => { :is_compact => true }
 
 
 /* .row*/
